--- a/html/options.html
+++ b/html/options.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 	<title>Pivotal Meet Harvest Options</title>
-	<link rel="stylesheet" href="options.css" type="text/css" />
-	<script src="jquery.js"></script>
-	<script src="options.js"></script>
+	<link rel="stylesheet" href="../css/options.css" type="text/css" />
+	<script src="../lib/jquery.js"></script>
+	<script src="../js/options.js"></script>
 </head>
 <body>
 	<table>
