--- a/html/timers.html
+++ b/html/timers.html
@@ -3,18 +3,7 @@
 		<li class="clearfix harvest">
 			<div class="left"><span>HARVEST</span></div>
 			<div class="right">
-				<select class="harvest-task">
-					<option value="Development and Support">Development and Support</option>
-					<option value="Content Entry">Content Entry</option>
-					<option value="Emergency Development">Emergency Development</option>
-					<option value="Flash Development">Flash Development</option>
-					<option value="Meeting / Phone Call">Meeting / Phone Call</option>
-					<option value="Non-Billable Development and Support">Non-Billable Development and Support</option>
-					<option value="Project Management">Project Management</option>
-					<option value="Quality Assurance and Testing">Quality Assurance and Testing</option>
-					<option value="Server Admin">Server Admin</option>
-					<option value="Web Design">Web Design</option>
-				</select>
+				<select class="harvest-task"></select>
 			</div>
 			<div class="right">
 				<div class="timer">
