--- a/html/timers.html
+++ b/html/timers.html
@@ -1,16 +1,7 @@
 <div>
 	<div id="single-timer">
-		<li class="clearfix harvest">
-			<div class="left"><span>HARVEST</span></div>
-			<div class="right">
-				<select class="harvest-task"></select>
-			</div>
-			<div class="right">
-				<div class="timer">
-					<span class="toggle">H</span>
-					<span class="time">0:33</span>
-				</div>
-			</div>
-		</li>
+		<div class="harvest">
+			<span>Harvest</span>
+		</div>
 	</div>
 </div>
